Example/css/main.css
aside {
  width: 140px;
  height: 860px;
  margin-bottom: 20px;
  border-top: 10px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  border-left: 1px solid black;
  float: right;
}

aside h3 {
  padding: 5px 0px 5px 5px;
  margin-top: 0px;
  text-transform: uppercase;
}

header {
  width: 800px;
  height: 80px;
  background-color: black;
  margin-bottom: 20px;
}

header h5 {
  border-bottom: 1px solid #fff;
  color: #fff;
  margin: 0 0 0 60px;
  padding-top: 40px;
  text-align: right;
  width: 40%;
  text-transform: uppercase;
}

.page {
  width: 800px;
  margin: 0 auto;
  padding: 0px 15px 0px 15px;
}


.featurecontainer {
  width: 640px;
  height: 420px;
  border-top: 10px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  border-left: 1px solid black;
  float: left;
  clear: both;
}

.featurecontainer h1 {
  padding: 5px 0px 5px 5px;
  margin-top: 0px;
  text-transform: uppercase;
}

.secondarycontent {
  width: 640px;
}
.social {
  height: 140px;
  width: 310px;
  margin-top: 20px;
  border-top: 10px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  border-left: 1px solid black;
  float: left;
}

.social h1 {
  padding: 5px 0px 5px 5px;
  margin-top: 0px;
  text-transform: uppercase;
}

.web {
  height: 408px;
  width: 310px;
  margin-top: 20px;
  margin-left: 2px;
  margin-bottom: 20px;
  border-top: 10px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  border-left: 1px solid black;
  float: right;
}

.web h1 {
  padding: 5px 0px 5px 5px;
  margin-top: 0px;
  text-transform: uppercase;
}

.tablet {
  height: 236px;
  width: 310px;
  margin-top: 20px;
  border-top: 10px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  border-left: 1px solid black;
  float: left;
}

.tablet h1 {
  padding: 5px 0px 5px 5px;
  margin-top: 0px;
  text-transform: uppercase;
}
/* ==========================================================================
   Author's custom styles
   ========================================================================== */















/* ==========================================================================
   Media Queries
   ========================================================================== */

